# Agent-Pilot

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  LICENSE  README.md  config.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  run_services.sh  test_pilot_flow.py  test_server.py
agent/: __init__.py  approval.py  attachments.py  cli.py  context.py  loop.py  mcp.py  named_agents.py  orchestrator_worker.py  permissions.py  providers.py  router.py  skills.py  subagent.py  teams.py
bot/: card_v2.py  cards_pilot.py  cards_streaming.py  cards_v4.py  event_handler.py  feishu_client.py  feishu_ws_subscriber.py  handlers_v4.py  message_sender.py  pilot_router.py  streaming.py
core/: advanced_features.py  analytics.py  classification_engine.py  context_recall.py  event_store.py  exceptions.py  feishu_workspace_init.py  flow_detector.py  logging_config.py  resilience.py  rookie_buddy.py  sender_profile.py  smart_shield.py  smart_shield_v3.py
dashboard/: api_v7.py  server.py
data/: T20_RESULT.json
deploy/: README_部署说明.md  V2_UPGRADE_GUIDE.md  deploy_v12_clean.sh  deploy_v12_simple.sh  deploy_v12_to_aliyun.sh  scp_upload.exp  ssh_deploy.exp  ssh_deploy_quick.exp  ssh_helper.exp
docs/: ARCHITECTURE.md  DEMO_JUDGE_WOW.md  DEMO_SCRIPT.md  HARNESS_DESIGN.md  JUDGE_GUIDE.md  JUDGE_TEST_REPORT.md  PRD_COVERAGE.md  v13_FINAL_ACCEPTANCE.md  个人周期工作汇报_戴尚好.md  工作汇报_纯文字版_戴尚好.md  技术调研报告.md  用户使用指南_Agent_Pilot.md  项目成果总结.md  飞书权限更新后Bot无响应的解决方案.md
llm/: llm_client.py
memory/: interruption_log.py  user_state.py
mobile_desktop/: pubspec.yaml
pilot/: __init__.py  __main__.py
scripts/: flutter_check.sh  judge_demo.py  run_ab_matrix.py  run_t20_smoke.py
sync_v4/: yws_server.py
tests/: test_advanced_agent.py  test_agent_pilot.py  test_agent_v4.py  test_concurrency.py  test_config_validation.py  test_e2e_pilot_flow.py  test_flow_detector.py  test_flow_memory.py  test_harness_components.py  test_integration_pilot_flow.py  test_knowledge_base.py  (+27 more)
(+139 files in other folders)
