[project]
name = "agent-pilot"
version = "1.0.0"
description = "Agent-Pilot V1 — 飞书 IM 中的 AI 主驾驶 Harness"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "戴尚好", email = "bcefghj@163.com" },
    { name = "李洁盈", email = "JieyingLiii@outlook.com" },
]
keywords = ["agent", "harness", "feishu", "lark", "llm", "multi-agent", "crdt"]

dependencies = [
    "lark-oapi>=1.4.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "websockets>=12.0",
    "pycrdt>=0.10",
    "pycrdt-websocket>=0.16",
    "langgraph>=0.3",
    "anthropic>=0.40",
    "openai>=1.50",
    "httpx>=0.27",
    "pydantic>=2.7",
    "python-pptx>=0.6.23",
    "pillow>=10.0",
    "apscheduler>=3.10",
    "structlog>=24.0",
    "python-dotenv>=1.0",
    "redis>=5.0",
    "aiofiles>=23.0",
    "opentelemetry-api>=1.27",
    "opentelemetry-sdk>=1.27",
    "opentelemetry-instrumentation-fastapi>=0.48b0",
    "tenacity>=9.0",
    "rich>=13.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "pre-commit>=3.7",
    "mypy>=1.10",
]
mcp = [
    "mcp>=1.0",
]
tts = [
    "gtts>=2.5",
]

[project.scripts]
agent-pilot = "pilot.__main__:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["pilot*"]
exclude = ["tests*", "flutter_client*", "data*"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "RUF"]
ignore = ["E501", "B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "competition: 裁判级 e2e 用例",
    "real_llm: 需要真 LLM API（默认跳过）",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_ignores = true
